[package]
name = "test_prk_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prkorm = "0.2.0"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7.2", features = [
    "mysql",
    "tls-native-tls",
    "runtime-tokio",
] }
serde = { version = "1.0.190", features = ["derive"] }
